--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adiel Andrade",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "morgan": "^1.9.1"
   },
